Update reality.txt, vmess_tvc.txt, vmess.txt and related files

--- a/reality_clash.yaml
+++ b/reality_clash.yaml
@@ -32,11 +32,12 @@ proxies:
   - {"name":"🇩🇪DE | 🟢 | vless | @v2ray1_ng | 2","type":"vless","server":"51.38.98.69","port":443,"udp":false,"uuid":"6b690c69-7301-44c4-81e8-9d5d7e8263a6","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"-3sZE2OPDhkNtxufF2YqPmoa5hqVna5zalfJfrUiMm0","short-id":"ecd6615548c2bddb","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 0","type":"vless","server":"77.239.109.216","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 8","type":"vless","server":"2.58.95.16","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇳🇱NL | 🟢 | vless | @FreakConfig | 0","type":"vless","server":"5.129.208.19","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇦🇱AL | 🟢 | vless | @FreakConfig | 4","type":"vless","server":"al.spirako.com","port":443,"udp":false,"uuid":"f2a4624b-4efc-4409-bf2f-c7ec5f77503a","tls":false,"servername":"spirako.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"0hH6R90pSxwm7nZPGtJJcJFhwCXU3Rvf-wcEHE7hczo","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇳🇱NL | 🟢 | vless | @FreakConfig | 6","type":"vless","server":"77.239.109.216","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇺🇸US | 🟢 | vless | @FreakConfig | 9","type":"vless","server":"185.236.232.136","port":1001,"udp":false,"uuid":"c7c922da-ab54-433c-8046-1f9bf9d95c23","tls":false,"servername":"telewebion.com","network":"tcp","reality-opts":{"public-key":"8Gunn8hjWbit5yLtTPcvLph0u2ovHLsGoXX4IJS1EQ0","short-id":"5fab0deb","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇩🇪DE | 🔴 | vless | @mehrosaboran | 5","type":"vless","server":"91.99.70.212","port":443,"udp":false,"uuid":"a4927301-3463-4f16-8d51-9b485eef7beb","tls":false,"servername":"www.cdn77.com","network":"grpc","grpc-opts":{"grpc-service-name":"@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM"},"reality-opts":{"public-key":"Zjzu45fPTjjaIcBoYyaLqieLtsWJD8ujdzNOQodWvnk","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇳🇱NL | 🟢 | vless | @FreakConfig | 1","type":"vless","server":"5.129.208.19","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇦🇱AL | 🟢 | vless | @FreakConfig | 5","type":"vless","server":"al.spirako.com","port":443,"udp":false,"uuid":"f2a4624b-4efc-4409-bf2f-c7ec5f77503a","tls":false,"servername":"spirako.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"0hH6R90pSxwm7nZPGtJJcJFhwCXU3Rvf-wcEHE7hczo","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇳🇱NL | 🟢 | vless | @FreakConfig | 7","type":"vless","server":"77.239.109.216","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇺🇸US | 🟢 | vless | @FreakConfig | 10","type":"vless","server":"185.236.232.136","port":1001,"udp":false,"uuid":"c7c922da-ab54-433c-8046-1f9bf9d95c23","tls":false,"servername":"telewebion.com","network":"tcp","reality-opts":{"public-key":"8Gunn8hjWbit5yLtTPcvLph0u2ovHLsGoXX4IJS1EQ0","short-id":"5fab0deb","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇩🇪DE | 🟢 | vless | @mehrosaboran | 0","type":"vless","server":"91.99.70.212","port":443,"udp":false,"uuid":"2cd455a4-c698-42de-9830-ac628dbe2e26","tls":false,"servername":"www.cdn77.com","network":"grpc","grpc-opts":{"grpc-service-name":"@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM"},"reality-opts":{"public-key":"Zjzu45fPTjjaIcBoYyaLqieLtsWJD8ujdzNOQodWvnk","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇩🇪DE | 🔴 | vless | @mehrosaboran | 6","type":"vless","server":"91.99.70.212","port":443,"udp":false,"uuid":"a4927301-3463-4f16-8d51-9b485eef7beb","tls":false,"servername":"www.cdn77.com","network":"grpc","grpc-opts":{"grpc-service-name":"@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM----------@VPN_ROOM--------@VPN_ROOM"},"reality-opts":{"public-key":"Zjzu45fPTjjaIcBoYyaLqieLtsWJD8ujdzNOQodWvnk","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"❔XX | 🔴 | vless | @vpn_go67 | 7","type":"vless","server":"footlo.argha-v2pedia.monster","port":443,"udp":false,"uuid":"2301d419-fc86-44e0-84e5-d5aa81557c38","tls":false,"servername":"tuyacn.com","network":"grpc","grpc-opts":{"grpc-service-name":"Telegram:@v2pedia,Telegram:@v2pedia,Telegram:@v2pedia,Telegram:@v2pedia,Telegram:@v2pedia,Telegram:@v2pedia,Telegram:@v2pedia,Telegram:@v2pedia"},"reality-opts":{"public-key":"muEtUEPnEMopCqdrhYWMzzwBsAfjZ_NV1m-AnO1byxk","short-id":"da","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"❔XX | 🔴 | vless | @vpn_go67 | 11","type":"vless","server":"public.alpanel.top","port":1403,"udp":false,"uuid":"e9fe302e-dbc2-4d6f-a6b2-10d718c5d47b","tls":false,"servername":"tuyacn.com","network":"grpc","grpc-opts":{"grpc-service-name":"@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam"},"reality-opts":{"public-key":"rCdor1DLbQcXbNBD9aiLIoCYHwqTMh8ao9MIPMXo0yA","short-id":"99","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"❔XX | 🔴 | vless | @vpn_go67 | 13","type":"vless","server":"public.alpanel.top","port":1403,"udp":false,"uuid":"b19fb147-8ff7-465f-8525-312fd889fd73","tls":false,"servername":"tuyacn.com","network":"grpc","grpc-opts":{"grpc-service-name":"@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam,@vmesskhodam"},"reality-opts":{"public-key":"rCdor1DLbQcXbNBD9aiLIoCYHwqTMh8ao9MIPMXo0yA","short-id":"99","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
@@ -78,11 +79,12 @@ proxy-groups:
       - '🇩🇪DE | 🟢 | vless | @v2ray1_ng | 2'
       - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 0'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 8'
-      - '🇳🇱NL | 🟢 | vless | @FreakConfig | 0'
-      - '🇦🇱AL | 🟢 | vless | @FreakConfig | 4'
-      - '🇳🇱NL | 🟢 | vless | @FreakConfig | 6'
-      - '🇺🇸US | 🟢 | vless | @FreakConfig | 9'
-      - '🇩🇪DE | 🔴 | vless | @mehrosaboran | 5'
+      - '🇳🇱NL | 🟢 | vless | @FreakConfig | 1'
+      - '🇦🇱AL | 🟢 | vless | @FreakConfig | 5'
+      - '🇳🇱NL | 🟢 | vless | @FreakConfig | 7'
+      - '🇺🇸US | 🟢 | vless | @FreakConfig | 10'
+      - '🇩🇪DE | 🟢 | vless | @mehrosaboran | 0'
+      - '🇩🇪DE | 🔴 | vless | @mehrosaboran | 6'
       - '❔XX | 🔴 | vless | @vpn_go67 | 7'
       - '❔XX | 🔴 | vless | @vpn_go67 | 11'
       - '❔XX | 🔴 | vless | @vpn_go67 | 13'
@@ -124,11 +126,12 @@ proxy-groups:
       - '🇩🇪DE | 🟢 | vless | @v2ray1_ng | 2'
       - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 0'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 8'
-      - '🇳🇱NL | 🟢 | vless | @FreakConfig | 0'
-      - '🇦🇱AL | 🟢 | vless | @FreakConfig | 4'
-      - '🇳🇱NL | 🟢 | vless | @FreakConfig | 6'
-      - '🇺🇸US | 🟢 | vless | @FreakConfig | 9'
-      - '🇩🇪DE | 🔴 | vless | @mehrosaboran | 5'
+      - '🇳🇱NL | 🟢 | vless | @FreakConfig | 1'
+      - '🇦🇱AL | 🟢 | vless | @FreakConfig | 5'
+      - '🇳🇱NL | 🟢 | vless | @FreakConfig | 7'
+      - '🇺🇸US | 🟢 | vless | @FreakConfig | 10'
+      - '🇩🇪DE | 🟢 | vless | @mehrosaboran | 0'
+      - '🇩🇪DE | 🔴 | vless | @mehrosaboran | 6'
       - '❔XX | 🔴 | vless | @vpn_go67 | 7'
       - '❔XX | 🔴 | vless | @vpn_go67 | 11'
       - '❔XX | 🔴 | vless | @vpn_go67 | 13'
@@ -169,11 +172,12 @@ proxy-groups:
       - '🇩🇪DE | 🟢 | vless | @v2ray1_ng | 2'
       - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 0'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 8'
-      - '🇳🇱NL | 🟢 | vless | @FreakConfig | 0'
-      - '🇦🇱AL | 🟢 | vless | @FreakConfig | 4'
-      - '🇳🇱NL | 🟢 | vless | @FreakConfig | 6'
-      - '🇺🇸US | 🟢 | vless | @FreakConfig | 9'
-      - '🇩🇪DE | 🔴 | vless | @mehrosaboran | 5'
+      - '🇳🇱NL | 🟢 | vless | @FreakConfig | 1'
+      - '🇦🇱AL | 🟢 | vless | @FreakConfig | 5'
+      - '🇳🇱NL | 🟢 | vless | @FreakConfig | 7'
+      - '🇺🇸US | 🟢 | vless | @FreakConfig | 10'
+      - '🇩🇪DE | 🟢 | vless | @mehrosaboran | 0'
+      - '🇩🇪DE | 🔴 | vless | @mehrosaboran | 6'
       - '❔XX | 🔴 | vless | @vpn_go67 | 7'
       - '❔XX | 🔴 | vless | @vpn_go67 | 11'
       - '❔XX | 🔴 | vless | @vpn_go67 | 13'
